<resources>
    <string name="app_name">APPFootBall</string>
    <string name="home">HOME</string>

    <string name="PL">null</string>
    <string name="startDate">START DATE: </string>
    <string name="endDate">END DATE: </string>
    <string name="matchday">Matchday: </string>
    <string name="matchdayNumber">28</string>

    <string name="sDate">2021–08–13</string>
    <string name="eDate">2022–05–22</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title">WELCOME \nBACK \nFOOTBALL-ER</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signIn">Sign Up</string>

    <string name="helperText">*Required</string>

    <string name="leagueName">League Name</string>
    <string name="matchDay">CURRENTMATCHDAY :</string>
    <string name="matchDayNumber">33</string>


    <string name="points">1</string>
    <string name="nameChart">Man City</string>
    <string name="position">#</string>
    <string name="club">Club</string>
    <string name="win">W</string>
    <string name="lost">L</string>
    <string name="draw">D</string>
    <string name="points_value">Pst</string>
    <string name="area">AREA</string>
    <string name="tla">TLA</string>
    <string name="color">COLOR</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="more_information">MORE INFO</string>
    <string name="player_will_be_available">Player will be available</string>
    <string name="address">ADDRESS:</string>
    <string name="founded">FOUNDED:</string>
    <string name="venue">VENUE:</string>
    <string name="last_updated">LAST UPDATED:</string>
</resources>