<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlHomeItems">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHome"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civHome"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tvNameHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/civHome"
                android:text="@string/leagueName"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rlStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNameHome"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/civHome">


                <TextView
                    android:id="@+id/tvStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/startDate"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvstartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/tvStartDate"
                    android:text="@string/sDate"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlStartDate"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/civHome">


                <TextView
                    android:id="@+id/tvEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/endDate"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvendDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/tvEndDate"
                    android:text="@string/eDate"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlEndDate"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/civHome">


                <TextView
                    android:id="@+id/tvMatchday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/matchDay"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvmatchDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/tvMatchday"
                    android:text="@string/matchDayNumber"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="10sp" />

            </RelativeLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>