<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity"
    android:background="@color/blueSteal">

    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/details_border">

        <RelativeLayout
            android:id="@+id/rlContainer2"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/img_border">

            <RelativeLayout
                android:id="@+id/rlContainer3"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_above="@+id/rlContainer4">

                <ImageView
                    android:id="@+id/ivTeams"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/img_border"
                    android:src="@drawable/ic_launcher_background" />

                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="50dp"
                    android:layout_toStartOf="@+id/ivTeams">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/nameChart"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvShortName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tvName"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/rlContainer4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/area"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tvArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/area"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/tla"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tvTla"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/area"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tvColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/area"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlContact"
            android:layout_width="320dp"
            android:layout_height="120dp"
            android:layout_below="@+id/rlContainer2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/contact_border">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civContact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/contact_icon" />

            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/civContact">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/phone"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhoneDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tvPhone"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvPhone"
                    android:layout_marginBottom="5dp"
                    android:text="@string/email"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmailDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvPhone"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/tvEmail"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tvWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPhone"
                    android:layout_marginTop="5dp"
                    android:text="@string/website"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWebsiteDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPhone"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/tvWebsite"
                    android:text="@string/website"
                    android:textColor="@color/black"
                    android:textSize="11sp" />


            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>